# idea-pop

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  publish-images.yml
backend/: Cargo.toml  Dockerfile  audit.toml  deny.toml
backend/.sqlx/: query-01eaa852c1d7f04c74ac6860e0bf0f030478549d28b88cbb1135291a96dcabd2.json  query-0a93fe9444a638d8e771ec90616edb984637073221f7a176ed295a0d53ba58ee.json  query-0e132a5346cf024a64a63f4fd1429a61b2559ae1872a79c4bc4b59bc83980529.json  query-13e99e6c4707df746facb8b33dcd8bc268a02a195caefbc6b01143f1a996ac85.json  query-14f931a366b400eb28eb2a9677d627a37dc95cf0c93ef9e6e206334a2fa33db3.json  query-1cc442fdd4d2cd0c156c15027b13152ac42e4eb275903fa3fc9552cbb918c13d.json  query-285998662aa1c66d2e36ce3918910bdce9cfcfe203f643aa05ba2584b5aadad4.json  query-30503fa6228206f47ce95473ff16ee7b27c673c06a5e9794aca442717030d870.json  query-325ab456519bc52b3674d45a80c3e65fc9e36cc99ec3d31abd5ef82378335cc8.json  query-336d041d92b5d0185147cb2e455c00410238eb25dee5d3eedfcb2468ea96aab1.json  query-341cc67ea4bd8f7e9742aeeab7d4314d3bdb87b384a78667f2448735c00cd58c.json  query-46d0870274f82f97d1f2ef75abe59f96fc619e0c5db7fcef3ac56e1e95bb16a4.json  query-58760d974985e0f509306952cc6578a9ad17f3920c9636818c6ced2547ca3b02.json  query-60712dcdc56c9e7ec1efecbf60b11e6e7fdf117eba24a347536bba92ea6c71ab.json  query-67fe817a2da3fdc25d5809516c2881aaa8ae69e3b984a16640a3642ae7266fb4.json  query-70f417aae0b10bdbc50d62bf087a732fe4f4508f0c0081b9998787cabe3bee34.json  query-7556c2c64f5ea3070b47c2f07538938f6f5a0ed9882f880bba3270be7692feca.json  query-7d65ece98bcb9bbd068f5917af348c8e6fe92004df91664e5a71079ab1ddcfd0.json  query-856d460bf695abb792d76238af318b25e8c5a774ad7daeae64426832a36ebaae.json  query-87abf9a8ea84c09c21a629434f36f8f715d4f10624844dfe5631b67de93550f9.json  query-8f55f49fc48eeb99ec2273466e0c1cae8fc2e51dd494014420ee4f6a46e19f3d.json  query-96c3bdc565144dcfda383284bf7291752fe8f88d2ee42ab634849c69290ecd60.json  query-970d9801c625b17336a70d71bde62c6046e13a5a9381570ad52f6c6e646e7b0b.json  query-aa8168c30c11d33428f5d8624f741557bb49ca98c75c76867412a4d62be13388.json  query-b63f061356208ab677801758f38eeec9f511119ed263c66c961e3bbff9cd947b.json  query-b7e768a7a66e2fd4611a386b349a62ac4f3506948eeb5d4e65017bba212b8934.json  query-cacae27ccb49e846e36ee2de7096ed23e20ecbdfaa5178d80c66237efc481f2d.json  query-cbc39d1e7370d5aa6eef745b1693af3d0c287880cf0a31eac4fb63ebfdf6eb8d.json  query-cf9cfa0b8abd891cae093eb5c047c4222e86222f6dd6bdd2be944498986491f3.json  query-d0aed51e6a66744c9175ee10db61f6a3b70c780cabdb8a311b6f180c53f1b78a.json  query-e8efe376dfeeeb6037e86cbab6408602c339bcb0ea2bdf79a88fe9d1404a4523.json  query-ea48a2a8d8f529ddebc43e56a779bde15ffd3f49779236960d8db50af27dc297.json  query-f0a5d5642f2c1417a11fd65cdd697eeccca87b1b793d45fe9c9f6463b44b15c2.json  query-f137a1fe58c8b465e5033191ce8cffbecac233b55b83f95ac1fb5439fdfcba43.json  query-f4240674f8f50da0af615be075ff8cca981e5e407bb9ae1e2f6fe50b31b98b74.json  query-fba52447e01275911df267a0527bf0694fb6fe9e21752781ac54116ee7b6792a.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: account.rs  auth.rs  billing.rs  challenges.rs  children.rs  classes.rs  consents.rs  error.rs  explore.rs  extractor.rs  help.rs  lib.rs  library.rs  me.rs  parent.rs  portfolio.rs  progress.rs  state.rs  teacher.rs
backend/crates/api/tests/: account_integration.rs  auth_integration.rs  billing_integration.rs  challenge_integration.rs  children_integration.rs  class_mission_integration.rs  class_report_integration.rs  class_students_integration.rs  consents_integration.rs  content_integration.rs  health_log_integration.rs  help_integration.rs  parent_approvals_integration.rs  parent_integration.rs  portfolio_integration.rs  progress_integration.rs  safety_regression.rs  teacher_class_integration.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: account.rs  auth_service.rs  billing.rs  challenge.rs  child.rs  consent_service.rs  content.rs  help.rs  lib.rs  portfolio.rs  ports.rs  progress.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: account_repo.rs  billing_repo.rs  challenge_repo.rs  child_repo.rs  clock.rs  content_repo.rs  email.rs  hasher.rs  helper.rs  lib.rs  portfolio_repo.rs  progress_repo.rs  token.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: main.rs
backend/load/: k6_smoke.js
backend/migrations/: 20260623000001_init.sql  20260623000002_accounts.sql  20260624000001_children.sql  20260624000002_content.sql  20260624000003_challenges.sql  20260624000004_gamification.sql  20260625000005_portfolio.sql  20260626000006_billing.sql  20260627000007_superpower_category.sql  20260706000008_course_meta.sql  20260706000009_challenge_premium.sql  20260706000010_account_display_name.sql  20260707000011_email_preferences.sql  20260707000012_parent_approvals.sql  20260708000013_mission_helper.sql  20260708000014_class_assignment.sql  20260708000015_avatar_id_text.sql  20260708000016_kid_refresh_sessions.sql  20260708000017_class_students.sql
docker/: prometheus.yml  prometheus_rules.yml
docs/: HANDOFF.md  design-tokens.md  privacy-mission-helper-draft.md  runbook.md
frontend/: Dockerfile  lighthouserc.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/messages/: en.json  fa.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: AppShell.tsx  HelpPanel.tsx  Logo.test.tsx  Logo.tsx  PenguinMascot.test.tsx  PenguinMascot.tsx
frontend/src/lib/: avatars.ts  progress.ts
frontend/src/stories/: AppShell.stories.tsx  Button.stories.tsx  ExploreCategoryCard.stories.tsx  Input.stories.tsx  Logo.stories.tsx  PenguinMascot.stories.tsx  PersonaCard.stories.tsx  ProjectCard.stories.tsx  QuickMakeCard.stories.tsx  (+1 more)
scripts/: backup_restore_drill.sh
(+127 files in other folders)
