[workspace]
resolver = "2"
members = ["crates/domain", "crates/infra", "crates/api", "crates/server"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "migrate", "chrono", "macros", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
utoipa = { version = "4", features = ["uuid", "chrono"] }
async-trait = "0.1"
argon2 = "0.5"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder"] }
validator = { version = "0.18", features = ["derive"] }
governor = "0.6"
rand = { version = "0.8", features = ["std"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
strip = true
lto = "thin"
