[package]
name = "idea-pop-api"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
serde_json = { workspace = true }
