[package]
name = "idea-pop-api"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
idea-pop-domain = { path = "../domain" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true, features = ["time"] }
async-trait = { workspace = true }
validator = { workspace = true }
governor = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
idea-pop-infra = { path = "../infra" }
idea-pop-domain = { path = "../domain" }
async-trait = { workspace = true }
uuid = { workspace = true }

[[test]]
name = "health_log_integration"
path = "tests/health_log_integration.rs"

[[test]]
name = "auth_integration"
path = "tests/auth_integration.rs"

[[test]]
name = "children_integration"
path = "tests/children_integration.rs"

[[test]]
name = "content_integration"
path = "tests/content_integration.rs"
