[package]
name = "idea-pop-domain"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
