[package]
name = "idea-pop-infra"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
idea-pop-domain = { path = "../domain" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
hmac = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
