[package]
name = "idea-pop-server"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "idea-pop-server"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
api = { package = "idea-pop-api", path = "../api" }
idea-pop-infra = { path = "../infra" }
idea-pop-domain = { path = "../domain" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
